# mime-lib

./: .gitmodules  CMakeLists.txt  LICENSE  PREFIX  README.md  REFERENCES.md  library.cmake
include/pfs/: mime.hpp  mime_enum.hpp
src/: mime.cpp  mime_enum.cpp  read_mime.cpp
tests/: CMakeLists.txt  mime_by_extension.cpp
tools/: parse-registry.pl
tools/data/: application.csv
